--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
               <h4 style="text-align:left;font-weight:600">1.排产管理模块</h4>
               <p style="text-align:left">
                <a href="view/schedulingMgmt.html" style="color:#b3afaf;">1-1.排产管理</a> <br>
-               <a href="view/dialog-scheduling-view.html" style="color:#b3afaf;">1-2.排产管理查看页面</a> <br>
-               <a href="view/dialog-scheduling-edit.html" style="color:#b3afaf;">1-3.排产管理编辑页面</a> <br>
+               <a href="view/dialog-scheduling-view.html" style="color:#b3afaf;">1-2.排产管理查看页面-弹窗形式</a> <br>
+               <a href="view/schedulingView.html" style="color:#b3afaf;">1-3.排产管理查看页面-跳转页面形式</a> <br>
+               <a href="view/dialog-scheduling-edit.html" style="color:#b3afaf;">1-4.排产管理编辑页面</a> <br>
               </p>
             </div>
           </div>
