--- a/index.html
+++ b/index.html
@@ -39,10 +39,13 @@
               <div class="circle" id="circles-1"></div>
               <h4 style="text-align:left;font-weight:600">1.排产管理模块</h4>
               <p style="text-align:left">
-               <a href="view/schedulingMgmt.html" style="color:#b3afaf;">1-1.排产管理</a> <br>
-               <a href="view/dialog-scheduling-view.html" style="color:#b3afaf;">1-2.排产管理查看页面-弹窗形式</a> <br>
-               <a href="view/schedulingView.html" style="color:#b3afaf;">1-3.排产管理查看页面-跳转页面形式</a> <br>
-               <a href="view/dialog-scheduling-edit.html" style="color:#b3afaf;">1-4.排产管理编辑页面</a> <br>
+               <a href="view/schedulingMgmt.html" style="color:#b3afaf;">1-1.排产管理(4.10)</a> <br>
+               <a href="view/dialog-scheduling-view.html" style="color:#b3afaf;">1-2.排产管理查看页面-弹窗形式(4.11)</a> <br>
+               <a href="view/schedulingView.html" style="color:#b3afaf;">1-3.排产管理查看页面-跳转页面形式(4.10)</a> <br>
+               <a href="view/dialog-scheduling-edit.html" style="color:#b3afaf;">1-4.排产管理编辑页面(4.11)</a> <br>
+               <a href="view/dialog-scheduling-add.html" style="color:#b3afaf;">1-5.添加-选择基地(4.12)</a> <br>
+               <a href="view/dialog-scheduling-add.html" style="color:#b3afaf;">1-6.添加-休耕状态(4.12)</a> <br>
+               <a href="view/dialog-scheduling-add2.html" style="color:#b3afaf;">1-7.添加-未休耕状态(4.12)</a> <br>
               </p>
             </div>
           </div>
@@ -51,7 +54,7 @@
               <div class="circle" id="circles-2"></div>
               <h4 style="text-align:left;font-weight:600;">2.排产计划页面</h4>
                <p class="text-left">
-              <a href="view/schedulingPlan.html" style="color:#b3afaf;">2-1.排产计划</a> </p>
+              <a href="view/schedulingPlan.html" style="color:#b3afaf;">2-1.排产计划(4.11)</a> </p>
             </div>
           </div>
           <div class="col-md-4 skill-column">
@@ -61,13 +64,6 @@
               
             </div>
           </div>
-         <!--  <div class="col-md-3 skill-column">
-            <div class="skill-grid">
-              <div class="circle" id="circles-4"></div>
-              <h4>未完成</h4>
-            
-            </div>
-          </div> -->
           <div class="clearfix"> </div>
         </div>
       </div>
