--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
   <link href="yindao/bootstrap.css" rel='stylesheet' type='text/css' />
   <link href="yindao/style.css" rel='stylesheet' type='text/css' />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href='http://fonts.useso.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
+  <style>
+  .circle{
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    display: inline-block;
+    margin-right: 7px;
+  }
+   
+  </style>
 </head>
 
 <body>
@@ -27,9 +36,9 @@
       <div class="skills-top">
         <h3 class="top-title">工作目录</h3> 
         <p style="text-align:center">
-           <span style="color:#b3afaf;margin:20px 30px 0 0;display:inline-block"> <span style="width:16px;height:16px;border-radius:8px;"></span>第一版页面</span>
-        <span style="color:#ffa018;margin:20px 30px 0 0;display:inline-block"><span style="width:16px;height:16px;border-radius:8px;"></span>已审核</span>
-        <span style="color:#479e7d;margin:20px 30px 0 0;display:inline-block"><span style="width:16px;height:16px;border-radius:8px;"></span>已发给后台</span>
+           <span style="color:#b3afaf;margin:20px 30px 0 0;display:inline-block"> <span style="background-color:#b3afaf" class="circle"></span>第一版页面</span>
+        <span style="color:#ffa018;margin:20px 30px 0 0;display:inline-block"><span style="background-color:#ffa018" class="circle"></span>请审核</span>
+        <span style="color:#479e7d;margin:20px 30px 0 0;display:inline-block"><span style="background-color:#479e7d" class="circle"></span>已发给后台</span>
         </p>
        
        <!--  <span class="line"></span> -->
@@ -39,13 +48,12 @@
               <div class="circle" id="circles-1"></div>
               <h4 style="text-align:left;font-weight:600">1.排产管理模块</h4>
               <p style="text-align:left">
-               <a href="view/schedulingMgmt.html" style="color:#b3afaf;">1-1.排产管理(4.10)</a> <br>
-               <a href="view/dialog-scheduling-view.html" style="color:#b3afaf;">1-2.排产管理查看页面-弹窗形式(4.11)</a> <br>
-               <a href="view/schedulingView.html" style="color:#b3afaf;">1-3.排产管理查看页面-跳转页面形式(4.10)</a> <br>
-               <a href="view/dialog-scheduling-edit.html" style="color:#b3afaf;">1-4.排产管理编辑页面(4.11)</a> <br>
-               <a href="view/dialog-scheduling-add1.html" style="color:#b3afaf;">1-5.添加-选择基地(4.12)</a> <br>
-               <a href="view/dialog-scheduling-add.html" style="color:#b3afaf;">1-6.添加-休耕状态(4.12)</a> <br>
-               <a href="view/dialog-scheduling-add2.html" style="color:#b3afaf;">1-7.添加-未休耕状态(4.12)</a> <br>
+               <a href="view/schedulingMgmt.html" style="color:#ffa018;">1-1.排产管理(4.10)</a> <br>
+               <a href="view/dialog-scheduling-view.html" style="color:#ffa018;">1-2.查看排产管理页面(4.11)</a> <br>
+               <a href="view/dialog-scheduling-edit.html" style="color:#ffa018;">1-4.编辑排产管理页面(4.11)</a> <br>
+               <a href="view/dialog-scheduling-add1.html" style="color:#ffa018;">1-5.添加-选择基地(4.12)</a> <br>
+               <a href="view/dialog-scheduling-add.html" style="color:#ffa018;">1-6.添加-休耕状态(4.12)</a> <br>
+               <a href="view/dialog-scheduling-add2.html" style="color:#ffa018;">1-7.添加-未休耕状态(4.12)</a> <br>
               </p>
             </div>
           </div>
