--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                <a href="view/dialog-scheduling-add1.html" style="color:#479e7d;">1-5.添加-选择基地(4.12)</a> <br>
                <a href="view/dialog-scheduling-add.html" style="color:#479e7d;">1-6.添加-休耕状态(4.12)</a> <br>
                <a href="view/dialog-scheduling-add2.html" style="color:#479e7d;">1-7.添加-未休耕状态(4.12)</a> <br>
-                <a href="view/dialog-scheduling-add2.html" style="color:#ffa018;">1-8.确认排产管理页面以及删除(4.13)</a> <br>
+                <a href="view/dialog-scheduling-done.html" style="color:#479e7d;">1-8.确认排产管理页面以及删除(4.13)</a> <br>
               </p>
             </div>
           </div>
