产量汇总完成

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <div class="circle" id="circles-2"></div>
               <h4 style="text-align:left;font-weight:600;">2.排产计划页面</h4>
                <p class="text-left">
-              <a href="view/schedulingPlan.html" style="color:#ffa018;">2-1.排产计划(4.14)</a> <br><a href="view/dialog-plan-edit.html" style="color:#ffa018;">2-2.排产计划-编辑(4.15-416)</a> 
+              <a href="view/schedulingPlan.html" style="color:#ffa018;">2-1.排产计划(4.14)</a> <br><a href="view/dialog-plan-edit.html" style="color:#ffa018;">2-2.排产计划-编辑(4.15-4.16)</a> 
             </p>
             </div>
           </div>
@@ -71,7 +71,9 @@
             <div class="skill-grid">
               <div class="circle" id="circles-3"></div>
               <h4 style="text-align:left;font-weight:600">3.产量汇总</h4>
-              
+                <p class="text-left">
+               <a href="view/schedulingSum.html" style="color:#ffa018;">3-1.产量汇总(4.17)</a> 
+            </p>
             </div>
           </div>
           <div class="clearfix"> </div>
