--- a/index.html
+++ b/index.html
@@ -54,26 +54,31 @@
                <a href="view/dialog-scheduling-add1.html" style="color:#479e7d;">1-5.添加-选择基地(4.12)</a> <br>
                <a href="view/dialog-scheduling-add.html" style="color:#479e7d;">1-6.添加-休耕状态(4.12)</a> <br>
                <a href="view/dialog-scheduling-add2.html" style="color:#479e7d;">1-7.添加-未休耕状态(4.12)</a> <br>
-                <a href="view/dialog-scheduling-done.html" style="color:#479e7d;">1-8.确认排产管理页面以及删除(4.13)</a> <br>
-              </p>
+                <a href="view/dialog-scheduling-done.html" style="color:#479e7d;">1-8.确认排产管理页面以及删除(4.13)</a>
+              </p> <br> 
+               <h4 style="text-align:left;font-weight:600;">2.排产计划页面</h4>
+               <p class="text-left">
+              <a href="view/schedulingPlan.html" style="color:#479e7d;">2-1.排产计划(4.14)</a> <br><a href="view/dialog-plan-edit.html" style="color:#479e7d;">2-2.排产计划-编辑(4.15-4.16)</a> 
+            </p> <br>
+              <h4 style="text-align:left;font-weight:600">3.产量汇总</h4>
+                <p class="text-left">
+               <a href="view/schedulingSum.html" style="color:#479e7d;">3-1.产量汇总(4.17)</a> 
+            </p>
             </div>
           </div>
           <div class="col-md-4 skill-column">
             <div class="skill-grid">
               <div class="circle" id="circles-2"></div>
-              <h4 style="text-align:left;font-weight:600;">2.排产计划页面</h4>
-               <p class="text-left">
-              <a href="view/schedulingPlan.html" style="color:#ffa018;">2-1.排产计划(4.14)</a> <br><a href="view/dialog-plan-edit.html" style="color:#ffa018;">2-2.排产计划-编辑(4.15-4.16)</a> 
+              <h4>4.种植管理模块</h4>
+              <p class="text-left">
+               <a href="view/growMgmt.html" style="color:#b3afaf;">4-1.产量汇总(4.18)</a> 
             </p>
             </div>
           </div>
           <div class="col-md-4 skill-column">
             <div class="skill-grid">
               <div class="circle" id="circles-3"></div>
-              <h4 style="text-align:left;font-weight:600">3.产量汇总</h4>
-                <p class="text-left">
-               <a href="view/schedulingSum.html" style="color:#ffa018;">3-1.产量汇总(4.17)</a> 
-            </p>
+              
             </div>
           </div>
           <div class="clearfix"> </div>
