--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
               <div class="circle" id="circles-2"></div>
               <h4>4.种植管理模块</h4>
               <p class="text-left">
-               <a href="view/growMgmt.html" style="color:#b3afaf;">4-1.产量汇总(4.18)</a> 
+               <a href="view/growMgmt.html" style="color:#b3afaf;">4-1.种植管理(4.18)</a> <br>
+                <a href="view/dialog-grow-mess.html" style="color:#b3afaf;">4-2.种植管理-种植信息(4.19)</a> 
             </p>
             </div>
           </div>
