--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
                 <a href="view/dialog-grow-add2.html" style="color:#ffa018;">4-4.种植管理-添加种植未休耕状态(4.21)</a> <br>
                 <a href="view/dialog-grow-nongshi.html" style="color:#ffa018;">4-5.种植管理-农事评估(4.22)</a> <br>
                 <a href="view/dialog-grow-upload.html" style="color:#ffa018;">4-6.种植管理-导入种植信息(4.22)</a> <br>
-                <a href="view/growMgmt.html" style="color:#ffa018;">4-7.种植管理-主页面新增删除功能(4.22)</a>  
+                <a href="view/growMgmt.html" style="color:#ffa018;">4-7.种植管理-主页面新增删除功能(4.22)</a>  <br>
+                <a href="view/growRecord.html" style="color:#ffa018;">4-8.种植管理-农事评估主页面(4.23)</a>  
             </p>
             </div>
           </div>
