采收记录添加、记录、主页

--- a/index.html
+++ b/index.html
@@ -87,8 +87,10 @@
               <div class="circle" id="circles-3"></div>
                <h4>5.采收记录</h4>
               <p class="text-center">
-               <a href="view/dialog-recovery-edit.html" style="color:#b3afaf;">5-1.采收记录-编辑采收(4.24)</a> <br>
-                
+               <a href="view/dialog-recovery-edit.html" style="color:#ffa018;">5-1.采收记录-编辑采收(4.24)</a> <br>
+              <a href="view/dialog-recovery-add.html" style="color:#ffa018;">5-2.采收记录-添加采收(4.25)</a> <br>
+              <a href="view/dialog-recovery-record.html" style="color:#ffa018;">5-3.采收记录-采收记录(4.25)</a> <br>
+              <a href="view/recoveryRecord.html" style="color:#b3afaf;">5-4.采收记录-主体页面(4.25)</a> <br>
             </p>
             </div>
           </div>
