--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
           </div>
           <div class="col-md-4 skill-column">
-            <div class="skill-grid">
+            <div class="skill-grid text-left">
               <div class="circle" id="circles-2"></div>
               <h4>4.种植管理模块</h4>
               <p class="text-left">
@@ -83,14 +83,16 @@
             </div>
           </div>
           <div class="col-md-4 skill-column">
-            <div class="skill-grid">
+            <div class="skill-grid text-left">
               <div class="circle" id="circles-3"></div>
-               <h4>5.采收记录</h4>
-              <p class="text-center">
+               <h4>5.采收管理</h4>
+              <p >
                <a href="view/dialog-recovery-edit.html" style="color:#ffa018;">5-1.采收记录-编辑采收(4.24)</a> <br>
               <a href="view/dialog-recovery-add.html" style="color:#ffa018;">5-2.采收记录-添加采收(4.25)</a> <br>
               <a href="view/dialog-recovery-record.html" style="color:#ffa018;">5-3.采收记录-采收记录(4.25)</a> <br>
               <a href="view/recoveryRecord.html" style="color:#ffa018;">5-4.采收记录-主体页面(4.25-4.26)</a> <br>
+              <a href="view/dialog-recovery-print.html" style="color:#ffa018;">5-5.采收记录-打印(4.27)</a> <br>
+              <a href="view/recoverySale.html" style="color:#ffa018;">5-6.预售管理-今日(4.27)</a> <br>
             </p>
             </div>
           </div>
