预售管理完成

--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
               <a href="view/recoveryRecord.html" style="color:#ffa018;">5-4.采收记录-主体页面(4.25-4.26)</a> <br>
               <a href="view/dialog-recovery-print.html" style="color:#ffa018;">5-5.采收记录-打印(4.27)</a> <br>
               <a href="view/recoverySale.html" style="color:#ffa018;">5-6.预售管理-今日(4.27)</a> <br>
+              <a href="view/recoverySaleNextday.html" style="color:#ffa018;">5-7.预售管理-明日(4.28)</a> <br>
+              <a href="view/recoverySaleHistory.html" style="color:#ffa018;">5-8.预售管理-历史(4.28)</a> <br>
             </p>
             </div>
           </div>
