--- a/index.html
+++ b/index.html
@@ -86,15 +86,24 @@
             <div class="skill-grid text-left">
               <div class="circle" id="circles-3"></div>
                <h4>5.采收管理</h4>
-              <p >
+              <p>
+                <br>
+              <h5 style="text-align:left;font-weight:600;">1.采收记录</h5>
                <a href="view/dialog-recovery-edit.html" style="color:#ffa018;">5-1.采收记录-编辑采收(4.24)</a> <br>
               <a href="view/dialog-recovery-add.html" style="color:#ffa018;">5-2.采收记录-添加采收(4.25)</a> <br>
               <a href="view/dialog-recovery-record.html" style="color:#ffa018;">5-3.采收记录-采收记录(4.25)</a> <br>
               <a href="view/recoveryRecord.html" style="color:#ffa018;">5-4.采收记录-主体页面(4.25-4.26)</a> <br>
-              <a href="view/dialog-recovery-print.html" style="color:#ffa018;">5-5.采收记录-打印(4.27)</a> <br>
+              <a href="view/dialog-recovery-print.html" style="color:#ffa018;">5-5.采收记录-打印(4.27)</a> <br><br>
+             <h5 style="text-align:left;font-weight:600;">2.预售管理</h5>
               <a href="view/recoverySale.html" style="color:#ffa018;">5-6.预售管理-今日(4.27)</a> <br>
               <a href="view/recoverySaleNextday.html" style="color:#ffa018;">5-7.预售管理-明日(4.28)</a> <br>
-              <a href="view/recoverySaleHistory.html" style="color:#ffa018;">5-8.预售管理-历史(4.28)</a> <br>
+              <a href="view/recoverySaleHistory.html" style="color:#ffa018;">5-8.预售管理-历史(4.28)</a> <br><br>
+               <h5 style="text-align:left;font-weight:600;">3.预采管理</h5>
+              <a href="view/recoveryMgmt.html" style="color:#ffa018;">5-9.预采管理-主页(4.29)</a> <br>
+              <a href="view/dialog-recoverymgmt-view.html" style="color:#ffa018;">5-10.预采管理-查看(4.29)</a> <br>
+              <a href="view/dialog-recoverymgmt-edit.html" style="color:#ffa018;">5-11.预采管理-编辑(4.29)</a> <br>
+              <a href="view/dialog-recoverymgmt-add1.html" style="color:#ffa018;">5-12.预采管理-按作物-按日添加(4.29)</a> <br>
+              <a href="view/dialog-recoverymgmt-add1.html" style="color:#ffa018;">5-13.预采管理-按大棚-按日添加(4.29)</a> <br>
             </p>
             </div>
           </div>
