--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
               <a href="view/dialog-recoverymgmt-edit.html" style="color:#ffa018;">5-11.预采管理-编辑(4.29)</a> <br>
               <a href="view/dialog-recoverymgmt-add1.html" style="color:#ffa018;">5-12.预采管理-按作物-按日添加(4.29)</a> <br>
               <a href="view/dialog-recoverymgmt-add1.html" style="color:#ffa018;">5-13.预采管理-按大棚-按日添加(4.29)</a> <br>
+              <a href="view/dialog-recoverymgmt-add1-week.html" style="color:#ffa018;">5-14.预采管理-按作物-按周添加(4.30)</a> <br>
+              <a href="view/dialog-recoverymgmt-add1-month.html" style="color:#ffa018;">5-15.预采管理-按作物-按月添加(4.30)</a> <br>
+             <a href="view/dialog-recoverymgmt-add1-year.html" style="color:#ffa018;">5-16.预采管理-按作物-按年添加(4.30)</a> <br>
             </p>
             </div>
           </div>
